examples/errors/invalid_pattern_syntax_error.flx
// Triggers E106 (INVALID PATTERN): pattern token is invalid.
let x = match 1 {
    + -> 1;
};
print(x);
